--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,6 @@
 Source: pybind11
-Maintainer: Ghislain Antony Vaillant <ghisvail@gmail.com>
+Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.debian.org>
+Uploaders: Ghislain Antony Vaillant <ghisvail@gmail.com>
 Section: libs
 Priority: optional
 Build-Depends: cmake (>= 2.8.12),
