--- a/debian/rules
+++ b/debian/rules
@@ -21,3 +21,6 @@ override_dh_auto_build:
 override_dh_auto_install:
 	dh_auto_install
 	dh_auto_install --buildsystem=pybuild
+
+override_dh_installchangelogs:
+	dh_installchangelogs docs/changelog.rst
