--- a/debian/control
+++ b/debian/control
@@ -7,11 +7,13 @@ Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 10),
                dh-python,
                python-all,
+               python-pytest,
                python-setuptools,
                python-sphinx,
                python-sphinx-rtd-theme,
                python3-all,
                python3-dev,
+               python3-pytest,
                python3-setuptools
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-science/packages/pybind11.git
