--- a/debian/control
+++ b/debian/control
@@ -5,15 +5,16 @@ Section: libs
 Priority: optional
 Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 10),
+               dpkg-dev (>= 1.17.14),
                dh-python,
                python-all,
-               python-pytest,
+               python-pytest <!nocheck>,
                python-setuptools,
                python-sphinx,
                python-sphinx-rtd-theme,
                python3-all,
-               python3-dev,
-               python3-pytest,
+               python3-dev <!nocheck>,
+               python3-pytest <!nocheck>,
                python3-setuptools
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-science/packages/pybind11.git
