--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,12 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE = 1
 
+ifeq (,$(findstring nocheck,$(DEB_BUILD_PROFILES)))
+	BUILD_OPTIONS = -DPYBIND11_TEST=ON
+else
+	BUILD_OPTIONS = -DPYBIND11_TEST=OFF
+endif
+
 export PYBUILD_NAME = pybind11
 
 %:
@@ -11,6 +17,9 @@ export PYBUILD_NAME = pybind11
 override_dh_auto_clean:
 	dh_auto_clean
 	dh_auto_clean --buildsystem=pybuild
+
+override_dh_auto_configure:
+	dh_auto_configure -- $(BUILD_OPTIONS)
 
 override_dh_auto_build: export http_proxy=127.0.0.1:9
 override_dh_auto_build: export https_proxy=127.0.0.1:9
