--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,13 @@ Build-Depends: cmake (>= 2.8.12),
                python-all,
                python-pytest <!nocheck>,
                python-setuptools,
-               python-sphinx,
-               python-sphinx-rtd-theme,
+               python-sphinx <!nodoc>,
+               python-sphinx-rtd-theme <!nodoc>,
                python3-all,
                python3-dev <!nocheck>,
                python3-pytest <!nocheck>,
-               python3-setuptools
+               python3-setuptools,
+               sphinx-common
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-science/packages/pybind11.git
 Vcs-Git: https://anonscm.debian.org/git/debian-science/packages/pybind11.git
@@ -29,7 +30,7 @@ Multi-Arch: foreign
 Section: libdevel
 Depends: ${misc:Depends},
 Suggests: libeigen3-dev,
-          pybind11-doc,
+          pybind11-doc <!nodoc>,
 Description: seamless operability between C++11 and Python
  pybind11 is a lightweight header library that exposes C++ types in
  Python and vice versa, mainly to create Python bindings of existing C++
@@ -55,6 +56,7 @@ Description: documentation for pybind11
  introspection.
  .
  This package provides the documentation.
+Build-Profiles: <!nodoc>
 
 Package: python-pybind11
 Architecture: all
