--- a/debian/rules
+++ b/debian/rules
@@ -26,7 +26,9 @@ override_dh_auto_build: export https_proxy=127.0.0.1:9
 override_dh_auto_build:
 	dh_auto_build
 	dh_auto_build --buildsystem=pybuild
+ifeq (,$(findstring nodoc,$(DEB_BUILD_PROFILES)))
 	PYTHONPATH=. sphinx-build -N -b html docs build/html
+endif
 
 override_dh_auto_install:
 	dh_auto_install
