--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,11 +1,11 @@
-Test-Command: c++ -shared -fPIC `python-config --cflags --ldflags` -o $AUTOPKGTEST_TMP/example.so ./debian/tests/example.cpp
- ; PYTHONPATH=$AUTOPKGTEST_TMP python -c "import example; assert(example.add(1, 2) == 3)"
-Depends: g++ | c++-compiler, pybind11-dev, python-dev
+Test-Command: cp debian/tests/example/* $AUTOPKGTEST_TMP && cd $AUTOPKGTEST_TMP
+ ; cmake . && make && python -c "import example; assert(example.add(1, 2) == 3)"
+Depends: cmake, g++ | c++-compiler, pybind11-dev, python-dev
 Restrictions: allow-stderr
 
-Test-Command: c++ -shared -fPIC `python3-config --cflags --ldflags` -o $AUTOPKGTEST_TMP/example.so ./debian/tests/example.cpp 
- ; PYTHONPATH=$AUTOPKGTEST_TMP python3 -c "import example; assert(example.add(1, 2) == 3)"
-Depends: g++ | c++-compiler, pybind11-dev, python3-dev
+Test-Command: cp debian/tests/example/* $AUTOPKGTEST_TMP && cd $AUTOPKGTEST_TMP
+ ; cmake . && make && python3 -c "import example; assert(example.add(1, 2) == 3)"
+Depends: cmake, g++ | c++-compiler, pybind11-dev, python3-dev
 Restrictions: allow-stderr
 
 Test-Command: python -c "import pybind11; print pybind11.get_include()"
