--- a/debian/rules
+++ b/debian/rules
@@ -3,12 +3,6 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE = 1
 
-ifeq (,$(findstring nocheck,$(DEB_BUILD_PROFILES)))
-	BUILD_OPTIONS = -DPYBIND11_TEST=ON
-else
-	BUILD_OPTIONS = -DPYBIND11_TEST=OFF
-endif
-
 export PYBUILD_NAME = pybind11
 
 %:
@@ -19,7 +13,11 @@ override_dh_auto_clean:
 	dh_auto_clean --buildsystem=pybuild
 
 override_dh_auto_configure:
-	dh_auto_configure -- $(BUILD_OPTIONS)
+ifeq (,$(findstring nocheck,$(DEB_BUILD_PROFILES)))
+	dh_auto_configure -- -DPYBIND11_TEST=ON
+else
+	dh_auto_configure -- -DPYBIND11_TEST=OFF
+endif
 
 override_dh_auto_build: export http_proxy=127.0.0.1:9
 override_dh_auto_build: export https_proxy=127.0.0.1:9
