--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,13 @@ Build-Depends: cmake (>= 2.8.12),
                python-all,
                python-pytest <!nocheck>,
                python-setuptools,
-               python-sphinx <!nodoc>,
-               python-sphinx-rtd-theme <!nodoc>,
                python3-all,
+               python3-breathe <!nodoc>,
                python3-dev <!nocheck>,
                python3-pytest <!nocheck>,
                python3-setuptools,
+               python3-sphinx <!nodoc>,
+               python3-sphinx-rtd-theme <!nodoc>,
                sphinx-common
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/git/debian-science/packages/pybind11.git
