--- a/debian/rules
+++ b/debian/rules
@@ -25,7 +25,7 @@ override_dh_auto_build:
 	dh_auto_build
 	dh_auto_build --buildsystem=pybuild
 ifeq (,$(findstring nodoc,$(DEB_BUILD_PROFILES)))
-	PYTHONPATH=. sphinx-build -N -b html docs build/html
+	make -C docs html
 endif
 
 override_dh_auto_install:
