--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,14 @@
 
 export PYBUILD_NAME = pybind11
 
+CONFIGURE_ARGS = -DPYBIND11_INSTALL:BOOL=ON
+ifeq (,$(findstring nocheck,$(DEB_BUILD_PROFILES)))
+CONFIGURE_ARGS += -DPYBIND11_TEST:BOOL=ON \
+	-DPYTHON_EXECUTABLE:FILEPATH=/usr/bin/$(shell py3versions -d)
+else
+CONFIGURE_ARGS += -DPYBIND11_TEST:BOOL=OFF
+endif
+
 %:
 	dh $@ --with python2,python3,sphinxdoc --buildsystem=cmake
 
@@ -16,11 +24,8 @@ ifeq (,$(findstring nodoc,$(DEB_BUILD_PROFILES)))
 endif
 
 override_dh_auto_configure:
-ifeq (,$(findstring nocheck,$(DEB_BUILD_PROFILES)))
-	dh_auto_configure -- -DPYBIND11_TEST=ON
-else
-	dh_auto_configure -- -DPYBIND11_TEST=OFF
-endif
+	dh_auto_configure -- $(CONFIGURE_ARGS)
+	dh_auto_configure --buildsystem=pybuild
 
 override_dh_auto_build: export http_proxy=127.0.0.1:9
 override_dh_auto_build: export https_proxy=127.0.0.1:9
