Run tests for optional dependencies (eigen, numpy)

--- a/debian/control
+++ b/debian/control
@@ -7,13 +7,16 @@ Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 10),
                dpkg-dev (>= 1.17.14),
                dh-python,
+               libeigen3-dev <!nocheck>,
                python-all,
                python-pytest <!nocheck>,
                python-setuptools,
                python3-all,
                python3-breathe <!nodoc>,
                python3-dev <!nocheck>,
+               python3-numpy <!nocheck>,
                python3-pytest <!nocheck>,
+               python3-scipy <!nocheck>,
                python3-setuptools,
                python3-sphinx <!nodoc>,
                python3-sphinx-rtd-theme <!nodoc>,
