Add new test dependency on Boost

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 10),
                dpkg-dev (>= 1.17.14),
                dh-python,
+               libboost-dev (>= 1.56) <!nocheck>,
                libeigen3-dev <!nocheck>,
                python-all,
                python-pytest <!nocheck>,
