--- a/debian/tests/control
+++ b/debian/tests/control
@@ -50,7 +50,7 @@ Test-Command: set -e
  ; for py in $(pyversions -r 2>/dev/null)
  ; do cd "$AUTOPKGTEST_TMP"
  ; echo "Testing with $py:"
- ; $py -c "import pybind11; print(pybind11.get_include())"
+ ; $py -m pybind11 --includes
  ; done
 Depends: python-all, python-pybind11
 
@@ -58,6 +58,6 @@ Test-Command: set -e
  ; for py in $(py3versions -r 2>/dev/null)
  ; do cd "$AUTOPKGTEST_TMP"
  ; echo "Testing with $py:"
- ; $py -c "import pybind11; print(pybind11.get_include())"
+ ; $py -m pybind11 --includes
  ; done
 Depends: python3-all, python3-pybind11
