--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,7 @@ export PYBIND11_USE_CMAKE=1
 export PYBUILD_NAME = pybind11
 
 CONFIGURE_ARGS = -DPYBIND11_INSTALL:BOOL=ON
-ifeq (,$(findstring nocheck,$(DEB_BUILD_PROFILES)))
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 CONFIGURE_ARGS += -DPYBIND11_TEST:BOOL=ON \
 	-DPYTHON_EXECUTABLE:FILEPATH=/usr/bin/$(shell py3versions -d)
 else
@@ -22,7 +22,7 @@ endif
 override_dh_auto_clean:
 	dh_auto_clean
 	dh_auto_clean --buildsystem=pybuild
-ifeq (,$(findstring nodoc,$(DEB_BUILD_PROFILES)))
+ifeq (,$(filter nodoc,$(DEB_BUILD_OPTIONS)))
 	$(MAKE) -C docs clean
 endif
 
@@ -35,7 +35,7 @@ override_dh_auto_build: export https_proxy=127.0.0.1:9
 override_dh_auto_build:
 	dh_auto_build
 	dh_auto_build --buildsystem=pybuild
-ifeq (,$(findstring nodoc,$(DEB_BUILD_PROFILES)))
+ifeq (,$(filter nodoc,$(DEB_BUILD_OPTIONS)))
 	$(MAKE) -C docs html
 endif
 
