--- a/debian/control
+++ b/debian/control
@@ -22,8 +22,8 @@ Build-Depends: cmake (>= 2.8.12),
                python3-sphinx-rtd-theme <!nodoc>,
                sphinx-common
 Standards-Version: 4.1.0
-Vcs-Browser: https://anonscm.debian.org/cgit/debian-science/packages/pybind11.git
-Vcs-Git: https://anonscm.debian.org/git/debian-science/packages/pybind11.git
+Vcs-Browser: https://salsa.debian.org/science-team/pybind11
+Vcs-Git: https://salsa.debian.org/science-team/pybind11.git
 Homepage: https://github.com/pybind/pybind11
 X-Python-Version: >= 2.7
 X-Python3-Version: >= 3.2
