drop python-pybind11 (Python2 is deprecated)
Closes: #937389.

--- a/debian/rules
+++ b/debian/rules
@@ -17,7 +17,7 @@ CONFIGURE_ARGS+=-DPYBIND11_TEST:BOOL=OFF
 endif
 
 %:
-	dh $@ --with python2,python3,sphinxdoc --buildsystem=cmake
+	dh $@ --with python3,sphinxdoc --buildsystem=cmake
 
 override_dh_auto_clean:
 	dh_auto_clean
