add pybind11 tests to debian/tests with pytest-3

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -29,3 +29,14 @@ Test-Command: set -e
  ; $py -m pybind11 --includes
  ; done
 Depends: python3-all, python3-pybind11
+
+Test-Command: set -e
+ ; cp -r tests ${AUTOPKGTEST_TMP}
+ ; cd ${AUTOPKGTEST_TMP}/tests
+ ; cmake .
+ ; make
+ ; pytest-3
+Depends: python3-all,
+ python3-pybind11,
+ python3-pytest,
+ cmake
