--- a/debian/rules
+++ b/debian/rules
@@ -46,5 +46,15 @@ override_dh_auto_install:
 override_dh_installchangelogs:
 	dh_installchangelogs docs/changelog.rst
 
+override_dh_installdocs:
+	dh_installdocs
+	cp debian/images/* debian/pybind11-doc/usr/share/doc/pybind11-doc/html/_images
+	sed "s|src=\"https://github.com/pybind/pybind11/raw/master/docs/pybind11-logo.png|src=\"_images/pybind11-logo.png|g" -i debian/pybind11-doc/usr/share/doc/pybind11-doc/html/*.html
+	sed "s|src=\"https://ci.appveyor.com/api/projects/status/riaj54pn4h08xy40?svg=true|src=\"_images/build_passing_riaj54pn4h08xy40.svg|g" -i debian/pybind11-doc/usr/share/doc/pybind11-doc/html/*.html
+	sed "s|src=\"https://github.com/pybind/pybind11/workflows/CI/badge.svg|src=\"_images/badge.svg|g" -i debian/pybind11-doc/usr/share/doc/pybind11-doc/html/*.html
+	sed "s|src=\"https://img.shields.io/gitter/room/gitterHQ/gitter.svg|src=\"_images/gitter.svg|g" -i debian/pybind11-doc/usr/share/doc/pybind11-doc/html/*.html
+	sed "s|src=\"https://readthedocs.org/projects/pybind11/badge?version=latest|src=\"_images/docspassing.svg|g" -i debian/pybind11-doc/usr/share/doc/pybind11-doc/html/*.html
+	sed "s|src=\"https://img.shields.io/badge/docs-stable-blue|src=\"_images/docs-stable.svg|g" -i debian/pybind11-doc/usr/share/doc/pybind11-doc/html/*.html
+
 get-orig-source:
 	uscan --download-current-version --force-download --no-symlink
