--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Uploaders: Ghislain Antony Vaillant <ghisvail@gmail.com>
 Section: libs
 Priority: optional
 Build-Depends: debhelper-compat (= 13),
-               cmake (>= 3.18~),
+               cmake,
                dpkg-dev (>= 1.17.14),
                dh-python,
                libboost-dev (>= 1.56) <!nocheck>,
